# jira-integration-automation

./: .env  .gitignore  README.md  main.py  pyproject.toml  settings.yaml  start.bat  start.ps1
docs/confluence/: jira-automation-task-scheduler.md
jira_integration/: main.py  server.py  settings.py  task_manager.py  types.py
jira_integration/tasks/: CancelCopyJobsTickets.py  ManualTriggerBIC.py  OldUnassignedTicket.py  ReportsFalsePositiveCheck.py  UPSReport.py
