[project]
name = "jira_integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipython>=9.6.0",
    "jira[cli]>=3.10.5",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "pywinrm>=0.5.0",
]
[tool.uv]
package = true
